implementacion de estilos css y version de aplicacion completa

--- a/mysite/polls/templates/editar_libro.html
+++ b/mysite/polls/templates/editar_libro.html
@@ -1,7 +1,10 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html>
 <head>
     <title>Editar Libro</title>
+    <link rel="stylesheet" type="text/css" href="{% static './styles.css' %}">
 </head>
 <body>
     <h1>Editar Libro</h1>
