--- a/mysite/polls/templates/editar_biblioteca.html
+++ b/mysite/polls/templates/editar_biblioteca.html
@@ -1,7 +1,10 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html>
 <head>
     <title>Editar Biblioteca</title>
+    <link rel="stylesheet" type="text/css" href="{% static './styles.css' %}">
 </head>
 <body>
     <h1>Editar Biblioteca</h1>
