--- a/mysite/polls/templates/eliminar_biblioteca.html
+++ b/mysite/polls/templates/eliminar_biblioteca.html
@@ -1,7 +1,10 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html>
 <head>
     <title>Eliminar Biblioteca</title>
+    <link rel="stylesheet" type="text/css" href="{% static './styles.css' %}">
 </head>
 <body>
     <h1>Eliminar Biblioteca</h1>
