--- a/mysite/polls/templates/eliminar_libro.html
+++ b/mysite/polls/templates/eliminar_libro.html
@@ -1,7 +1,10 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html>
 <head>
     <title>Eliminar Libro</title>
+    <link rel="stylesheet" type="text/css" href="{% static './styles.css' %}">
 </head>
 <body>
     <h1>Eliminar Libro</h1>
