--- a/mysite/polls/templates/listar_bibliotecas.html
+++ b/mysite/polls/templates/listar_bibliotecas.html
@@ -1,7 +1,10 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html>
 <head>
     <title>Bibliotecas</title>
+    <link rel="stylesheet" type="text/css" href="{% static './styles.css' %}">
 </head>
 <body>
     <h1>Lista de Bibliotecas</h1>
