--- a/mysite/polls/templates/nueva_biblioteca.html
+++ b/mysite/polls/templates/nueva_biblioteca.html
@@ -1,7 +1,10 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html>
 <head>
     <title>Nueva Biblioteca</title>
+    <link rel="stylesheet" type="text/css" href="{% static './styles.css' %}">
 </head>
 <body>
     <h1>Añadir Nueva Biblioteca</h1>
