--- a/mysite/polls/templates/nuevo_libro.html
+++ b/mysite/polls/templates/nuevo_libro.html
@@ -1,7 +1,10 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html>
 <head>
     <title>Nuevo Libro</title>
+    <link rel="stylesheet" type="text/css" href="{% static './styles.css' %}">
 </head>
 <body>
     <h1>Añadir Nuevo Libro</h1>
